fix spacing so it aligns with page

--- a/validation/GCWeb/css/custom.css
+++ b/validation/GCWeb/css/custom.css
@@ -1015,6 +1015,10 @@ body.transactional div#wb-bnr div.brand {
 	}
 
  /* For the CCB project */
+
+ #brand-container-cra .container {
+	 padding: 0 .75em 0 .75em;
+ }
 	#brand-container-cra {
 	    background: #347e83 none repeat scroll 0 0!important;
 	}
